# infinite-content

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
infinite_content/: cli.py  onboarding.py
infinite_content/stages/: extract.py  ideas.py  publish.py  render.py  script.py
live_to_carousel/: cli.py  config.py  onboarding.py
templates/: slot_map.example.json
tests/: test_onboarding.py
