[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "infinite-content"
version = "0.1.0"
description = "Long-form source → ranked ideas → platform-ready carousel posts. One source, infinite content."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.40.0",
    "pillow>=11.0.0",
    "requests>=2.32.0",
    "pydantic>=2.9.0",
    "click>=8.1.0",
    "python-slugify>=8.0.0",
]

[project.optional-dependencies]
transcribe = [
    "yt-dlp>=2025.1.0",
    "openai-whisper>=20240930",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.7.0",
]

[project.scripts]
ic = "infinite_content.cli:main"

[tool.setuptools.packages.find]
include = ["infinite_content*"]

[tool.ruff]
line-length = 100
target-version = "py312"
